2011-08-08  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.5.9

2011-07-17  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-utils.c (charset_convert): Don't skip validation of
	UTF-8 text.

2011-07-17  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-utils.c (charset_convert): Handle ERANGE the same as
	EILSEQ.

	* gmime/gmime-filter-charset.c (filter_filter): Handle ERANGE the
	same as EILSEQ.

	* gmime/gmime-charset.c (g_mime_charset_map_init): Improved logic
	for Win32 (and even Linux) systems. Don't rely on setlocale().

2011-06-15  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-parser.c: Added new state, MESSAGE_HEADERS, which
	behaves the same as HEADERS but is only ever set when we are
	parsing the toplevel GMimeMessage object.
	(parser_step_headers): Be slightly more strict in handling
	malformed headers in the MESSAGE_HEADERS state so that trying to
	parse non-message streams fails (e.g. if someone tries to parse a
	jpeg stream).

2011-06-15  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-gpg-context.c: Define nfds_t on OSX.

2011-06-10  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.5.8

2011-06-09  Jeffrey Stedfast  <fejj@gnome.org>

	Fix for bug #652056

	* gmime/gmime-param.c (decode_value): If STRICT_PARSER isn't
	defined, don't require the value to start with a valid character.

2011-06-08  Daniel Kahn Gillmor  <dkg@fifthhorseman.net>

	Fix for bug #651826

	* gmime/gmime-gpg-context.c
	(g_mime_gpg_context_[g,s]_set_use_agent): New functions to allow
	the invoker to declare that they expect there to be a functioning
	gpg-agent, and want gpg to talk to it for any needed credentials.

2011-06-08  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-gpg-context.c: If building on Apple, force the use
	of our own implementation of poll() because Apple's poll() is
	broken on some versions of MacOS.
