@@ -757,14 +757,15 @@ g_mime_multipart_set_postface
 g_mime_multipart_get_postface
 g_mime_multipart_set_boundary
 g_mime_multipart_get_boundary
+g_mime_multipart_get_count
+g_mime_multipart_contains
+g_mime_multipart_index_of
 g_mime_multipart_add
 g_mime_multipart_clear
 g_mime_multipart_insert
 g_mime_multipart_remove
 g_mime_multipart_remove_at
-g_mime_multipart_get_count
-g_mime_multipart_contains
-g_mime_multipart_index_of
+g_mime_multipart_replace
 g_mime_multipart_get_part
 g_mime_multipart_foreach
 g_mime_multipart_get_subpart_from_content_id
